subreddit listing sort indicator. closes #75

--- a/subreddit.html
+++ b/subreddit.html
@@ -8,11 +8,11 @@
   <div id="subredditSortPanel" style="display: none;" class="container-fluid">
     <div class="row-fluid">
       <div id="subredditSortingOptions" class="span12">
-        <span data-snooby-sort="hot" class="sort-option">Hot</span>
-        <span data-snooby-sort="new" class="sort-option">New</span>
-        <span data-snooby-sort="rising" class="sort-option">Rising</span>
-        <span data-snooby-sort="controversial" class="sort-option">Controversial</span>
-        <span data-snooby-sort="top" class="sort-option">Top</span>
+        <span id="hot" data-snooby-sort="hot" class="sort-option">Hot</span>
+        <span id="new" data-snooby-sort="new" class="sort-option">New</span>
+        <span id="rising" data-snooby-sort="rising" class="sort-option">Rising</span>
+        <span id="top" data-snooby-sort="top" class="sort-option">Top</span>
+        <span id="controversial" data-snooby-sort="controversial" class="sort-option">Controversial</span>
       </div>
     </div>
   </div>
