Top sorting granularity. Closes #89

--- a/subreddit.html
+++ b/subreddit.html
@@ -16,6 +16,18 @@
       </div>
     </div>
   </div>
+  <div id="subredditTopSortingPanel" style="display: none;" class="container-fluid">
+    <div class="row-fluid">
+      <div id="subredditTopSortingOptions" class="span12">
+        <span id="month" data-snooby-sort="month" class="sort-option">this month</span>
+        <span id="hour" data-snooby-sort="hour" class="sort-option">this hour</span>
+        <span id="day" data-snooby-sort="day" class="sort-option">today</span>
+        <span id="week" data-snooby-sort="week" class="sort-option">this week</span>
+        <span id="year" data-snooby-sort="year" class="sort-option">this year</span>
+        <span id="all" data-snooby-sort="all" class="sort-option">all time</span>
+      </div>
+    </div>
+  </div>
   <div id="noResults" style="display: none;">
     There doesn't seem to be anything here.
   </div>
