--- a/subreddit.html
+++ b/subreddit.html
@@ -42,7 +42,7 @@
     <div data-bb-type="action" 
          onclick="_subreddits.refresh()" 
          data-bb-style="button" data-bb-img="img/icons/ic_rotate.png">Refresh</div>
-    <div data-bb-type="action" 
+    <div id="mailbox" data-bb-type="action" 
          onclick="_subreddits.pushMailbox()" 
          data-bb-style="button" data-bb-img="img/icons/ic_email.png">Mail</div>
    <div data-bb-type="action"
