Announcements loads /r/snoobyapp. Closes #41

--- a/subreddit.html
+++ b/subreddit.html
@@ -61,6 +61,11 @@
         data-bb-overflow="true"
         data-bb-img="img/icons/ic_star.png">Snooby Gold</div>
    <div data-bb-type="action"
+        onclick="bbr.pushSubredditScreen('snoobyapp')"
+        data-bb-style="button"
+        data-bb-overflow="true"
+        data-bb-img="img/icons/ic_view_list.png">Announcements</div>
+   <div data-bb-type="action"
         onclick="bb.pushScreen('about.html', 'about');"
         data-bb-style="button"
         data-bb-overflow="true"
